@@ -41,6 +41,9 @@ struct extent_scan
   /* Next scan start offset.  */
   off_t scan_start;
 
+  /* Flags to use for scan.  */
+  uint32_t fm_flags;
+
   /* How many extent info returned for a scan.  */
   uint32_t ei_count;
 
