@@ -28,6 +28,10 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Changes in behavior
 
+  cp now avoids syncing files when possible, when doing a FIEMAP copy.
+  The sync in only needed on Linux kernels before 2.6.38.
+  [The sync was introduced in coreutils-8.10]
+
   df now aligns columns consistently, and no longer wraps entries
   with longer device identifiers, over two lines.
 
